V 1.3.0 // Warps and updater!
Updates:
- Warps: see all command ingame with /warp help
- Updater: it notifies when a new version aviable is; configure it in
the config
- translation to German (download here: )
- minor bug fixes

Read more about this update here.