@@ -1,4 +1,10 @@
 @echo off
 
-java -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Xms512M -Xmx1G -XX:MaxPermSize=128M -jar spigot.jar
-pause
+mode con:cols=200 lines=50
+
+:loop
+
+java -Xmx1G -jar spigot-1.8.8.jar
+
+PAUSE
+goto loop
